--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "my-app",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+     "test": "vitest"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
@@ -10,6 +11,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "vitest": "^2.1.8"
   }
 }
